Update fix for hero text overflowing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -142,7 +142,7 @@ nav {
   grid-column: 1/2;
   /* padding-top: 360px; */
   justify-content: center;
-  margin-top: 350px;
+  margin-top: 200px;
   background-color: rgba(0, 0, 0, 0.6);
   padding: 8px;
   margin-bottom: 5px;
